--- a/206-divs-flexbox-starter/css/main.css
+++ b/206-divs-flexbox-starter/css/main.css
@@ -99,13 +99,14 @@ body {
     font-family: 'Source Sans Pro', sans-serif;
     padding: 2em;
     font-size: 1.25em;
+    background-color: #fff;
     height: 100%;
 }
 
 .wrapper {
     display: flex;
     justify-content: space-between;
-    font-weight: 700;
+    font-weight: 500;
 }
 
 .div-1, .div-2, .div-3 {
@@ -114,11 +115,16 @@ body {
     justify-content: center;
     align-items: center;
     width: 30%;
-    color: #fff;
+    color: #848484;
     line-height: 1.5em;
-    font-size: 1.6em;
-    background-color: #f16059;
-    height: 300px;
+    font-size: 1em;
+    background-color: #CFDAFF;
+    padding: 30px;
+}
+
+.div-2 {
+    border-left: dotted;
+    border-right: dotted;
 }
 
 /* ==========================================================================
