--- a/206-divs-flexbox-starter/css/main.css
+++ b/206-divs-flexbox-starter/css/main.css
@@ -93,20 +93,57 @@ textarea {
 html {
     background-color: #fff;
     height: 100%;
+    width: 100%;
 }
 
 body {
     font-family: 'Source Sans Pro', sans-serif;
     padding: 2em;
     font-size: 1.25em;
-    background-color: #fff;
+    background-color: #222;
     height: 100%;
+}
+
+header, footer {
+    background-color: #222;
+    height: 80px;
+    width: 100%;
+    padding-left: 30px;
+}
+
+header, footer, main {
+    display: flex;
+    justify-content: flex-start;
+}
+
+header {
+    color: #fff;
+    font-size: 3em;
+    align-items: center;
+}
+
+footer {
+    color: #fff;
+    font-size: 1em;
+    align-items: center;
+}
+
+main {
+    background-color: #ccc;
+    color: #fff;
+    font-size: 2em;
+    padding-left: 30px;
+    height: 80px;
+    width: 100%;
+    align-items: center;
 }
 
 .wrapper {
     display: flex;
     justify-content: space-between;
-    font-weight: 500;
+    align-items: center;
+    flex-flow: row wrap;
+    height: 100%;
 }
 
 .div-1, .div-2, .div-3 {
@@ -115,17 +152,14 @@ body {
     justify-content: center;
     align-items: center;
     width: 30%;
-    color: #848484;
+    height: 200px;
     line-height: 1.5em;
     font-size: 1em;
-    background-color: #CFDAFF;
-    padding: 30px;
+    color: #fff;
+    padding: 25px;
+    background-color: #f16059;
 }
 
-.div-2 {
-    border-left: dotted;
-    border-right: dotted;
-}
 
 /* ==========================================================================
    Helper classes
