--- a/206-rogue-pickings-starter/css/main.css
+++ b/206-rogue-pickings-starter/css/main.css
@@ -1,10 +1,10 @@
-@font-face{
-	font-family: 'Wisdom Script';
-	src: url('../fonts/wisdom-script.otf') format('opentype');
-}
-
 html {
 	font-size: 16px;
+}
+
+@font-face {
+	font-family: 'Wisdom Script';
+	src: url('../fonts/wisdom-script.otf') format('opentype');
 }
 
 body {
@@ -15,168 +15,146 @@ body {
 	font-size: 1em;
 }
 
-.container{
+.container {
 	max-width: 1200px;
-	margin: 0 auto;
+	width: 90%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-flow: row wrap;
 }
 
-h1,
-h2,
-h3,
-h4 {
+h1, h2, h3, h4 {
 	color: black;
 	text-transform: uppercase;
 	font-weight: 700;
 }
-h1 {
-	font-size: 1.875em;
-}
-h2 {
-    font-size: 1.5em;
-}
-h3 {
-	font-size: 1.125em;
-}
-h4 {
-	font-size: 0.75em;
-}
 
 p {
 	font-size: 0.875em;
-	line-height: 21px;
-    padding: 0 30px;
+	line-height: 1.3125em;
+}
+
+ul {
+	margin: 0;
 }
 
 /*The widths are in a percentage!*/
+
 header {
-	height: 110px;
 	border-bottom: 3px solid #77a466;
-	margin: 0 auto;
+	text-align: center;
+	width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-flow: row wrap;
 }
 
 header h1 {
-	float: left;
+	font-size: 1.875em;
 	margin: 0;
-	padding: 38px 0;
+	padding: 38px 20px 20px 20px;
+	border-bottom: 3px solid #77a466;
+	width: 100%;
 }
+
 header h1 span {
 	color: #77a466;
 }
 
 header nav {
-	float: right;
-	padding: 46px 0;
+	padding: 20px 0;
+	width: 100%;
 }
+
 header nav ul {
 	margin: 0;
 	padding: 0;
 }
+
 header nav ul li {
 	text-transform: uppercase;
 	font-weight: 700;
 	font-size: 0.875em;
 	padding: 0 10px;
-	display: inline;
+	margin: 10px 0;
+	list-style: none;
 }
-header nav ul li a{
+
+header nav ul li a {
 	text-decoration: none;
-	color:#77a466;
+	color: #77a466;
 }
 
 /*The widths are in a percentage!*/
-.top-section,
-.bottom-section {
-	margin: 0 auto;
-	clear: both;
+
+.top-section, .bottom-section {
 	display: flex;
-	justify-content:center;
+	justify-content: center;
 	align-items: center;
+	flex-flow: row wrap;
 }
 
-.main-image {
-	height: auto;
-	float: left;
-}
 .main-image img {
 	width: 100%;
 	border-bottom: 3px solid #77a466;
 }
 
-.main-title {
-	height: auto;
-	float: left;
-}
 .main-title h3 {
 	text-align: left;
 	padding: 5px 0;
 	color: #77a466;
 }
+
 .main-title p {
 	padding: 0;
 	font-size: 1em;
-	line-height: 25px;
+	line-height: 1.5625em;
 }
 
-.section-one,
-.section-two,
-.section-three {
-	width: 33%;
-	height: auto;
-	float: left;
+.section-one, .section-two, .section-three {
+	width: 100%;
 	border-top: 1px solid #eee;
 }
 
-.section-one h4 {
+.section-one h4, .section-two h4, .section-three h4 {
 	padding: 10px 0;
-}
-
-.section-two {
-	border-left: 1px solid #eee;
-	border-right: 1px solid #eee;
-}
-
-.section-two h4,
-.section-three h4 {
-	padding: 10px 30px;
 }
 
 .menu {
 	list-style: none;
 	padding: 0;
 }
+
 .menu li {
 	padding: 10px 0;
-	color:#77a466;
+	color: #77a466;
 }
 
 .reviews {
 	color: #333;
 	font-size: 1em;
-	line-height: 21px;
+	line-height: 1.3125em;
 }
 
 .address {
 	font-size: 1em;
-	line-height: 24px;
+	line-height: 1.5em;
 }
 
 /*The widths are in a percentage!*/
+
 footer {
-	height: 50px;
 	border-top: 3px solid #eee;
-	margin: 0 auto;
-	clear: both;
 	text-align: center;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	flex-flow: row wrap;
+	width: 100%;
 }
+
 footer span {
 	font-family: 'Wisdom Script', cursive;
 	text-transform: lowercase;
@@ -184,13 +162,49 @@ footer span {
 	font-size: 0.875em;
 }
 
-
 /*------------Tablets larger than 768px wide-----------*/
-@media (min-width: 768px) {
 
+@media only screen and (min-width: 768px) {
+	.bottom-section {
+		justify-content: space-around;
+		align-items: flex-start;
+		border-top: 1px solid #eee;
+	}
+	.section-one, .section-two, .section-three {
+		border-top: none;
+		flex-basis: 30%;
+	}
+
+	.section-two {
+		border-left: 1px solid #eee;
+		border-right: 1px solid #eee;
+		padding: 0 10px;
+	}
 }
 
 /*----------Monitors larger than 1200px wide ---------*/
-@media (min-width: 1200px) {
-	
+
+@media only screen and (min-width: 1200px) {
+
+	header {
+		justify-content: space-between;
+	}
+
+	header h1 {
+		width: 30%;
+		text-align: left;
+		border-bottom: none;
+		padding: 0;
+	}
+
+	header nav {
+		width: 50%;
+	}
+
+	header nav ul {
+		display: flex;
+		justify-content: space-between;
+	}
+
+
 }
